k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-deployment
  namespace: kiii-app-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kiii-app
  template:
    metadata:
      labels:
        app: kiii-app
    spec:
      containers:
        - name: kiii-container
          image: macccy/kiii-app:latest
          ports:
            - containerPort: 80
