k8s/service-cicd.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiii-cicd-service
spec:
  type: NodePort
  selector:
    app: kiii-cicd
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30080
