k8s/service-statefulSet.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlcontinerserver
  namespace: kiii-app-namespace
spec:
  clusterIP: None
  selector:
    app: mssql
  ports:
  - port: 1433
    targetPort: 1433
